[package]
name = "web-ui"
version = "0.4.5"
edition = "2021"

[dependencies]
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
copy_dir = "0.1.3"
osm_db = {path = "../osm_db"}
leptos-use = "0.9.0"
leptos_meta = "0.5.1"
leptos_router = { version = "0.5.1", features = ["csr"] }
log = "0.4.20"
leptos_theme = "0.1.1"
rust_solar = { version = "0.1.95", features = ["planets"] }
charming = { version = "0.3.1", features = ["wasm"] }
chrono = "0.4.34"
strum = "0.26.1"
strum_macros = "0.26.1"
serde = { version = "1.0.196", features = ["serde_derive", "derive"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde_json = "1.0.113"
wasm-bindgen = "0.2.91"
serde_with = "3.6.1"
chrono-tz = "0.8.6"
icu_calendar = "1.4.0"
Inflector = "0.11.4"


[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
